--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@
 *.knit.md
 *cache
 *.results
+
+# Other
+*.httr-oauth
+*.DS_Store
+
+# MTurk credentials and data
+auth.json
+my-own-auth.json
+mturk/
+mturk-and-gmail.txt
+
+# Specific file keep
+!README.md
+!/original....pdf
+.Rproj.user
